--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+.venv/
+venv/
 .env
+.env.*  # any env variants
+
+# OS/editor
+.DS_Store
+.idea/
+.vscode/
+
+# Streamlit cache (optional)
+.streamlit/
+
+# Build artifacts
+dist/
+build/
+*.log
+social_agent.db
