Updates to Dockerfile  and start.sh

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,11 @@
-.git
-__pycache__/
-.pytest_cache/
-.venv/
-.env
-*/.env
-node_modules/
+__pycache__
+*.pyc
+*.pyo
+*.pyd
 *.log
-*.sqlite*
+.env
+.venv
+.git
+.gitignore
+dist
+build
