--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,6 @@ streamlit==1.38.0
 requests==2.32.3
 pandas==2.2.2
 python-dateutil==2.9.0.post0
+openai>=1.51.0
+tiktoken>=0.7.0       
+httpx>=0.27          
