--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-fastapi>=0.110,<1.0
-uvicorn[standard]>=0.27,<1.0
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
 sqlmodel>=0.0.16,<0.0.20
-httpx>=0.24,<0.28
+httpx==0.27.2
 pydantic-settings>=2.2,<3.0
-python-dotenv>=1.0,<2.0
+pydantic==2.9.2
+python-dotenv==1.0.1
+openai==1.51.2
+requests==2.32.3
 apscheduler>=3.10,<4.0
 deep-translator>=1.11,<2.0
 langcodes>=3.3,<4.0
@@ -14,14 +17,10 @@ tavily-python>=0.3.3
 extruct>=0.16.0
 w3lib>=2.2.1
 lxml>=5.2.2
-beautifulsoup4>=4.12.3
+beautifulsoup4==4.12.3
 dateparser>=1.2.0
 setuptools>=68
-beautifulsoup4==4.12.3
 streamlit==1.38.0
-requests==2.32.3
 pandas==2.2.2
 python-dateutil==2.9.0.post0
-openai>=1.51.0
-tiktoken>=0.7.0       
-httpx>=0.27          
+tiktoken>=0.7.0         
