--- a/requirements-api.txt
+++ b/requirements-api.txt
@@ -9,4 +9,6 @@ beautifulsoup4==4.12.3
 pydantic-settings>=2.2
 langgraph>=0.2.0
 langchain-openai>=0.1.0
+langchain-community>=0.3.0
+faiss-cpu>=1.8.0
 
