--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,6 @@ python-dateutil==2.9.0.post0
 tiktoken>=0.7.0         
 langgraph>=0.2.0
 langchain-openai>=0.1.0
+langchain-community>=0.3.0
+faiss-cpu>=1.8.0
 
