--- a/requirements-api.txt
+++ b/requirements-api.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.30.6
 httpx==0.27.2
 pydantic==2.9.2
 python-dotenv==1.0.1
-openai==1.51.2
+openai>=1.109.1,<2.0.0
 requests==2.32.3
 beautifulsoup4==4.12.3
 pydantic-settings>=2.2
