--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ httpx==0.27.2
 pydantic-settings>=2.2,<3.0
 pydantic==2.9.2
 python-dotenv==1.0.1
-openai==1.51.2
+openai>=1.109.1,<2.0.0
 requests==2.32.3
 apscheduler>=3.10,<4.0
 deep-translator>=1.11,<2.0
