--- a/requirements-api.txt
+++ b/requirements-api.txt
@@ -1,14 +1,26 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
+# Core API stack (pinned to working versions from requirements.lock.txt)
+fastapi==0.115.12
+uvicorn[standard]==0.34.2
 httpx==0.27.2
-pydantic==2.9.2
-python-dotenv==1.0.1
-openai>=1.109.1,<2.0.0
-requests==2.32.3
-beautifulsoup4==4.12.3
-pydantic-settings>=2.2
-langgraph>=0.2.0
-langchain-openai>=0.1.0
-langchain-community>=0.3.0
-faiss-cpu>=1.8.0
+pydantic==2.11.3
+pydantic-settings==2.10.1
+python-dotenv==1.1.1
 
+# HTTP / parsing utilities
+requests==2.32.5
+beautifulsoup4==4.12.3
+
+# DB / scheduling (used in db.py, base.py, scheduler.py)
+SQLAlchemy==2.0.43
+sqlmodel==0.0.25
+APScheduler==3.11.0
+
+# OpenAI + LangGraph / LangChain stack (from lock file)
+openai==2.8.1
+langgraph-prebuilt==1.0.5
+langchain-openai==1.1.0
+langchain-community==0.3.29
+faiss-cpu==1.12.0
+
+# Tokenizer (used indirectly by langchain / openai)
+tiktoken==0.11.0
