--- a/requirements-api.txt
+++ b/requirements-api.txt
@@ -21,6 +21,7 @@ langgraph-prebuilt==1.0.5
 langchain-openai==1.1.0
 langchain-community==0.3.29
 faiss-cpu==1.12.0
+langchain-core==1.1.0
 
 # Tokenizer
 tiktoken==0.11.0
